main rwd done, lunch info done

--- a/index.html
+++ b/index.html
@@ -105,8 +105,11 @@
                         <div class="detail-con">
                             <div class="con-text">
                                 <strong>프리미엄 본-인 립아이 스테이크 세트</strong>
-                                <h3>Bone-in Ribeye Set</h3>
-                                <p>갈릭크림소스가 수북히 쌓인 본-인 립아이 스테이크, 세트메뉴와 함께 끝까지 맛있게</p>
+                                <h3>
+                                    Bone-in <br />
+                                    Ribeye Set
+                                </h3>
+                                <p>갈릭크림소스가 수북히 쌓인 립아이 스테이크, 세트메뉴와 끝까지 맛있게</p>
                             </div>
                             <a class="view-more" href="#">자세히 보기</a>
                         </div>
