--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
                     <li><a href="#">멤버십</a></li>
                     <li><a href="#">커뮤니티</a></li>
                 </ul>
-                <button type="button" class="but-login">로그인</button>
+                <button type="button" class="btn btn-login">로그인</button>
             </nav>
         </header>
         <hr />
@@ -86,7 +86,7 @@
             <section class="salad">
                 <div class="inner">
                     <h3>SALAD</h3>
-                    <ul class="salad-list">
+                    <ul class="salad-list menu-list">
                         <li>
                             <a href="#">
                                 <img src="./img/lunch_01.png" alt="만다린 치킨 샐러드 런치세트" />
@@ -134,7 +134,7 @@
 
                 <div class="inner">
                     <h3>PASTA & RICE</h3>
-                    <ul class="pasta-rice-list">
+                    <ul class="pasta-rice-list menu-list">
                         <li class="card-large">
                             <a herf="#">
                                 <strong class="badge-new">NEW</strong>
@@ -292,7 +292,7 @@
             <section class="steak">
                 <div class="inner">
                     <h3>STEAK</h3>
-                    <ul class="steak-list">
+                    <ul class="steak-list menu-list">
                         <li class="card-large">
                             <a herf="#">
                                 <strong class="badge-new">NEW</strong>
