--- a/index.html
+++ b/index.html
@@ -483,6 +483,6 @@
             </address>
         </footer>
 
-        <script src="./js/script.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
