--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                     <i>매드 런치 세트</i>
                                 </p>
                             </div>
-                            <a class="view-more" href="./menu.html">자세히 보기</a>
+                            <a class="view-more" href="./lunch.html">자세히 보기</a>
                         </div>
                         <div class="lunch-set-slider-wrap">
                             <div class="swiper lunch-set-slider">
