--- a/lunch.html
+++ b/lunch.html
@@ -56,7 +56,7 @@
                                 <div class="swiper-slide"><a href="#">피자</a></div>
                                 <div class="swiper-slide"><a href="#">스테이크</a></div>
                                 <div class="swiper-slide"><a href="#">시그니처 스테이크 세트</a></div>
-                                <div class="swiper-slide"><a href="#">런치세트</a></div>
+                                <div class="swiper-slide active"><a href="#">런치세트</a></div>
                                 <div class="swiper-slide"><a href="#">음료</a></div>
                                 <div class="swiper-slide"><a href="#">와인</a></div>
                                 <div class="swiper-slide"><a href="#">디저트</a></div>
