--- a/lunch.html
+++ b/lunch.html
@@ -10,7 +10,8 @@
 
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
-        <link rel="stylesheet" href="./css/lunch.css" />
+        <link rel="stylesheet" href="./css/menu.css" />
+        <!-- 저뭐냐... 라지두개두개 만드는걸로.... -->
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -19,7 +20,7 @@
         <header id="header">
             <nav>
                 <h1 class="logo">
-                    <a href="#"><img src="./img/logo-white.png" alt="매드 포 갈릭" /></a>
+                    <a href="./index.html"><img src="./img/logo-white.png" alt="매드 포 갈릭" /></a>
                 </h1>
                 <ul class="gnb">
                     <li><a href="#">매드포갈릭</a></li>
@@ -40,7 +41,7 @@
                     <h2>LUNCH SET</h2>
                     <strong>
                         매일 오후 4시까지<br />
-                        풀코스로 즐기는 <br>
+                        풀코스로 즐기는 <br />
                         <i>런치 세트메뉴</i>
                     </strong>
                 </div>
@@ -51,17 +52,17 @@
                     <div class="sub-menu">
                         <div class="sub-menu-swiper swiper">
                             <div class="sub-menu-swiper-wrapper swiper-wrapper">
-                                <div class="swiper-slide"><a href="#">에피타이저 & 샐러드</a></div>
+                                <div class="swiper-slide"><a href="./appetizer&salad.html">에피타이저 & 샐러드</a></div>
                                 <div class="swiper-slide"><a href="#">파스타 & 라이스</a></div>
                                 <div class="swiper-slide"><a href="#">피자</a></div>
                                 <div class="swiper-slide"><a href="#">스테이크</a></div>
                                 <div class="swiper-slide"><a href="#">시그니처 스테이크 세트</a></div>
-                                <div class="swiper-slide active"><a href="#">런치세트</a></div>
+                                <div class="swiper-slide active"><a href="./lunch.html">런치세트</a></div>
                                 <div class="swiper-slide"><a href="#">음료</a></div>
                                 <div class="swiper-slide"><a href="#">와인</a></div>
                                 <div class="swiper-slide"><a href="#">디저트</a></div>
                             </div>
-
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -145,7 +146,7 @@
                     <h3>PASTA & RICE</h3>
                     <ul class="pasta-rice-list menu-list">
                         <li class="card-large">
-                            <a herf="#">
+                            <a href="#">
                                 <strong class="badge-new">NEW</strong>
                                 <img src="./img/lunch_03.png" alt="갈릭페뇨 파스타 런치세트" />
                                 <div class="menu-title">
@@ -172,8 +173,8 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
-                                <img src="./img/lunch_04.png" alt="갈릭페뇨 파스타 런치세트" />
+                            <a href="#">
+                                <img src="./img/lunch_04.png" alt="트리플 갈릭 파스타 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>트리플 갈릭 파스타 런치세트</strong>
@@ -194,7 +195,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_05.png" alt="마늘 까르보나라 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
@@ -212,7 +213,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_06.png" alt="매드 페스카토레 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
@@ -233,7 +234,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_07.png" alt="해산물 크림 리조또 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
@@ -254,7 +255,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_08.png" alt="마늘 시즐링 라이스 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
@@ -275,7 +276,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_09.png" alt="소고기 & K-라이스 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
@@ -303,7 +304,7 @@
                     <h3>STEAK</h3>
                     <ul class="steak-list menu-list">
                         <li class="card-large">
-                            <a herf="#">
+                            <a href="#">
                                 <strong class="badge-new">NEW</strong>
                                 <img src="./img/lunch_10.png" alt="매드 글레이즈드 립 런치세트" />
                                 <div class="menu-title">
@@ -322,7 +323,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_11.png" alt="마늘 립아이 스테이크 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
@@ -343,7 +344,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_12.png" alt="매드 크림 필렛 스테이크 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
@@ -366,7 +367,7 @@
                             </a>
                         </li>
                         <li>
-                            <a herf="#">
+                            <a href="#">
                                 <img src="./img/lunch_13.png" alt="포레스트 스트립 스테이크 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
