menu pic update

--- a/appetizer&salad.html
+++ b/appetizer&salad.html
@@ -57,7 +57,7 @@
                                 <div class="swiper-slide active">
                                     <a href="./appetizer&salad.html">에피타이저 & 샐러드</a>
                                 </div>
-                                <div class="swiper-slide"><a href="#">파스타 & 라이스</a></div>
+                                <div class="swiper-slide"><a href="./pasta&rice.html">파스타 & 라이스</a></div>
                                 <div class="swiper-slide"><a href="#">피자</a></div>
                                 <div class="swiper-slide"><a href="#">스테이크</a></div>
                                 <div class="swiper-slide"><a href="#">시그니처 스테이크 세트</a></div>
@@ -78,17 +78,17 @@
                         <li class="card-large">
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/lunch_03.png" alt="쁘띠 부라타 바질 샐러드" />
+                                <img src="./img/menu-appetizer-gsf.png" alt="마늘 새우 프리또" />
                                 <div class="menu-title">
                                     <div class="menu-text">
-                                        <strong> 쁘띠 부라타 바질 샐러드 </strong>
-                                        <p>Petit Burrata Basil Salad</p>
+                                        <strong> 마늘 새우 프리또 </strong>
+                                        <p>Garlic Shrimp Fritto</p>
                                         <p>17,900원</p>
                                     </div>
                                 </div>
                                 <div class="menu-info">
-                                    <strong>쁘띠 부라타 바질 샐러드</strong>
-                                    <p>Petit Burrata Basil Salad</p>
+                                    <strong>마늘 새우 프리또</strong>
+                                    <p>Garlic Shrimp Fritto</p>
                                     <p>
                                         바삭하게 튀겨낸 새우와 감자, 브로콜리를 갈릭 시즈닝과 함께 즐기는 매드만의 갈릭
                                         슈림프 프리또
@@ -100,7 +100,7 @@
                         <li>
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/lunch_05.png" alt="새우 갈리올리오" />
+                                <img src="./img/menu-appetizer-go.png" alt="새우 갈리올리오" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>새우 갈리올리오</strong>
@@ -125,7 +125,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="사과 치즈 감자튀김" />
+                                <img src="./img/menu-appetizer-acf.png" alt="사과 치즈 감자튀김" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>사과 치즈 감자튀김</strong>
@@ -146,7 +146,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="매드 4 샘플러" />
+                                <img src="./img/menu-appetizer-m4s.png" alt="매드 4 샘플러" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>매드 4 샘플러</strong>
@@ -175,7 +175,7 @@
                         <li class="card-large">
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/lunch_03.png" alt="쁘띠 부라타 바질 샐러드" />
+                                <img src="./img/menu-salad-pbcs.png" alt="쁘띠 부라타 바질 샐러드" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong> 쁘띠 부라타 바질 샐러드 </strong>
@@ -196,7 +196,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="쁘띠 시저 샐러드" />
+                                <img src="./img/menu-salad-pcs.png" alt="쁘띠 시저 샐러드" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>쁘띠 시저 샐러드</strong>
@@ -217,7 +217,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="만다린 치킨 샐러드 " />
+                                <img src="./img/menu-salad-mc.png" alt="만다린 치킨 샐러드 " />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>만다린 치킨 샐러드 </strong>
@@ -238,7 +238,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="새우 텐더 샐러드" />
+                                <img src="./img/menu-salad-st.png" alt="새우 텐더 샐러드" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>새우 텐더 샐러드</strong>
