--- a/lunch.html
+++ b/lunch.html
@@ -52,8 +52,10 @@
                     <div class="sub-menu">
                         <div class="sub-menu-swiper swiper">
                             <div class="sub-menu-swiper-wrapper swiper-wrapper">
-                                <div class="swiper-slide"><a href="./appetizer&salad.html">에피타이저 & 샐러드</a></div>
-                                <div class="swiper-slide"><a href="#">파스타 & 라이스</a></div>
+                                <div class="swiper-slide">
+                                    <a href="./appetizer&salad.html">에피타이저 & 샐러드</a>
+                                </div>
+                                <div class="swiper-slide"><a href="./pasta&rice.html">파스타 & 라이스</a></div>
                                 <div class="swiper-slide"><a href="#">피자</a></div>
                                 <div class="swiper-slide"><a href="#">스테이크</a></div>
                                 <div class="swiper-slide"><a href="#">시그니처 스테이크 세트</a></div>
@@ -99,7 +101,7 @@
                     <ul class="salad-list menu-list">
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_01.png" alt="만다린 치킨 샐러드 런치세트" />
+                                <img src="./img/menu-salad-mc.png" alt="만다린 치킨 샐러드 런치세트" />
                                 <div class="menu-title">
                                     <strong>만다린 치킨 샐러드 런치세트</strong>
                                     <p>Mandarine Chicken Salad</p>
@@ -118,7 +120,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_02.png" alt="새우 텐더 샐러드 런치세트" />
+                                <img src="./img/menu-salad-st.png" alt="새우 텐더 샐러드 런치세트" />
                                 <div class="menu-title">
                                     <strong>새우 텐더 샐러드 런치세트</strong>
                                     <p>Shrimp Tender Salad</p>
@@ -148,7 +150,7 @@
                         <li class="card-large">
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/lunch_03.png" alt="갈릭페뇨 파스타 런치세트" />
+                                <img src="./img/menu-pasta-gp.png" alt="갈릭페뇨 파스타 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>
@@ -174,7 +176,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_04.png" alt="트리플 갈릭 파스타 런치세트" />
+                                <img src="./img/menu-pasta-tg.png" alt="트리플 갈릭 파스타 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>트리플 갈릭 파스타 런치세트</strong>
@@ -196,7 +198,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="마늘 까르보나라 런치세트" />
+                                <img src="./img/menu-pasta-gc.png" alt="마늘 까르보나라 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>마늘 까르보나라 런치세트</strong>
@@ -214,7 +216,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_06.png" alt="매드 페스카토레 런치세트" />
+                                <img src="./img/menu-pasta-mp.png" alt="매드 페스카토레 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>매드 페스카토레 런치세트</strong>
@@ -235,7 +237,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_07.png" alt="해산물 크림 리조또 런치세트" />
+                                <img src="./img/menu-rice-scr.png" alt="해산물 크림 리조또 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>해산물 크림 리조또 런치세트</strong>
@@ -256,7 +258,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_08.png" alt="마늘 시즐링 라이스 런치세트" />
+                                <img src="./img/menu-rice-gs.png" alt="마늘 시즐링 라이스 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>마늘 시즐링 라이스 런치세트</strong>
@@ -277,7 +279,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_09.png" alt="소고기 & K-라이스 런치세트" />
+                                <img src="./img/menu-rice-BK.png" alt="소고기 & K-라이스 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>소고기 & K-라이스 런치세트</strong>
@@ -306,7 +308,7 @@
                         <li class="card-large">
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/lunch_10.png" alt="매드 글레이즈드 립 런치세트" />
+                                <img src="./img/menu-steak-mgr.png" alt="매드 글레이즈드 립 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>매드 글레이즈드 립 런치세트</strong>
@@ -324,7 +326,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_11.png" alt="마늘 립아이 스테이크 런치세트" />
+                                <img src="./img/menu-steak-gr.png" alt="마늘 립아이 스테이크 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>마늘 립아이 스테이크 런치세트</strong>
@@ -345,7 +347,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_12.png" alt="매드 크림 필렛 스테이크 런치세트" />
+                                <img src="./img/menu-steak-mcf.png" alt="매드 크림 필렛 스테이크 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>매드 크림 필렛 스테이크 런치세트</strong>
@@ -368,7 +370,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_13.png" alt="포레스트 스트립 스테이크 런치세트" />
+                                <img src="./img/menu-steak-fs.png" alt="포레스트 스트립 스테이크 런치세트" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>포레스트 스트립 스테이크 런치세트</strong>
