--- a/pasta&rice.html
+++ b/pasta&rice.html
@@ -52,10 +52,10 @@
                     <div class="sub-menu">
                         <div class="sub-menu-swiper swiper">
                             <div class="sub-menu-swiper-wrapper swiper-wrapper">
-                                <div class="swiper-slide active">
+                                <div class="swiper-slide">
                                     <a href="./appetizer&salad.html">에피타이저 & 샐러드</a>
                                 </div>
-                                <div class="swiper-slide"><a href="./pasta&rice.html">파스타 & 라이스</a></div>
+                                <div class="swiper-slide active"><a href="./pasta&rice.html">파스타 & 라이스</a></div>
                                 <div class="swiper-slide"><a href="#">피자</a></div>
                                 <div class="swiper-slide"><a href="#">스테이크</a></div>
                                 <div class="swiper-slide"><a href="#">시그니처 스테이크 세트</a></div>
@@ -76,7 +76,7 @@
                         <li class="card-large">
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/lunch_03.png" alt="오션 수프 봉골레 파스타" />
+                                <img src="./img/menu-pasta-osvp.png" alt="오션 수프 봉골레 파스타" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>
@@ -103,7 +103,7 @@
                         <li class="card-large">
                             <a href="#">
                                 <strong class="badge-new">NEW</strong>
-                                <img src="./img/lunch_03.png" alt="마늘 명란 파스타" />
+                                <img src="./img/menu-pasta-gm.png" alt="마늘 명란 파스타" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>
@@ -129,7 +129,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="갈릭페뇨 파스타" />
+                                <img src="./img/menu-pasta-gp.png" alt="갈릭페뇨 파스타" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>갈릭페뇨 파스타</strong>
@@ -151,7 +151,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_04.png" alt="트리플 갈릭 파스타" />
+                                <img src="./img/menu-pasta-tg.png" alt="트리플 갈릭 파스타" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>트리플 갈릭 파스타</strong>
@@ -173,7 +173,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_05.png" alt="마늘 까르보나라" />
+                                <img src="./img/menu-pasta-gc.png" alt="마늘 까르보나라" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>마늘 까르보나라</strong>
@@ -191,7 +191,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_06.png" alt="매드 페스카토레" />
+                                <img src="./img/menu-pasta-mp.png" alt="매드 페스카토레" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>매드 페스카토레</strong>
@@ -212,7 +212,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_06.png" alt="마늘 크림 게살 파스타" />
+                                <img src="./img/menu-pasta-gcc.png" alt="마늘 크림 게살 파스타" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>마늘 크림 게살 파스타</strong>
@@ -232,7 +232,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_06.png" alt="메드 라자냐" />
+                                <img src="./img/menu-pasta-ml.png" alt="메드 라자냐" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>메드 라자냐</strong>
@@ -257,7 +257,7 @@
                     <ul class="rice-list menu-list">
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_06.png" alt="마늘 시즐링 라이스" />
+                                <img src="./img/menu-rice-gs.png" alt="마늘 시즐링 라이스" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>마늘 시즐링 라이스</strong>
@@ -279,7 +279,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_06.png" alt="소고기 & K-라이스" />
+                                <img src="./img/menu-rice-BK.png" alt="소고기 & K-라이스" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>소고기 & K-라이스</strong>
@@ -301,7 +301,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <img src="./img/lunch_06.png" alt="해산물 크림 리조또" />
+                                <img src="./img/menu-rice-scr.png" alt="해산물 크림 리조또" />
                                 <div class="menu-title">
                                     <div class="menu-text">
                                         <strong>해산물 크림 리조또</strong>
