--- a/menu-appetizer&salad.html
+++ b/menu-appetizer&salad.html
@@ -11,9 +11,13 @@
         <link rel="stylesheet" href="./css/reset.css" />
         <link rel="stylesheet" href="./css/common.css" />
         <link rel="stylesheet" href="./css/menu.css" />
+        <link rel="stylesheet" href="./css/appetizer&salad.css" />
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
         <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+        <script src="./js/jquery-3.7.1.min.js"></script>
+        <script src="./js/common.js"></script>
+        <script src="./js/menu.js"></script>
     </head>
     <body>
         <header id="header">
@@ -22,11 +26,97 @@
                     <a href="./index.html"><img src="./img/logo-white.png" alt="매드 포 갈릭" /></a>
                 </h1>
                 <ul class="gnb">
-                    <li><a href="#">매드포갈릭</a></li>
-                    <li><a href="#">메뉴</a></li>
-                    <li><a href="#">매장</a></li>
-                    <li><a href="#">멤버십</a></li>
-                    <li><a href="#">커뮤니티</a></li>
+                    <li>
+                        <a href="#">매드포갈릭</a>
+                        <ul class="gnb-sub">
+                            <li>
+                                <a href="#"><b>MAD FOR GARLIC</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>마늘이야기</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>모바일앱 소개</b></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">메뉴</a>
+                        <ul class="gnb-sub">
+                            <li>
+                                <a href="#"><b>에피타이저 & 샐러드</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>파스타 & 라이스</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>피자</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>스테이크</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>시그니처 스테이크 세트</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>런치 세트</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>음료 & 디저트</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>와인</b></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">매장</a>
+                        <ul class="gnb-sub">
+                            <li>
+                                <a href="#"><b>매장찾기</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>예약하기</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>대관안내</b></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">멤버십</a>
+                        <ul class="gnb-sub">
+                            <li>
+                                <a href="#"><b>M CLUB</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>멤버십 혜택</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>가입하기</b></a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">커뮤니티</a>
+                        <ul class="gnb-sub">
+                            <li>
+                                <a href="#"><b>이벤트</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>공지사항</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>제휴 & 상품권</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>문의사항</b></a>
+                            </li>
+                            <li>
+                                <a href="#"><b>채용안내</b></a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
                 <button type="button" class="btn btn-login">로그인</button>
                 <button type="button" class="btn btn-menu"><i class="hidden">메뉴</i></button>
@@ -55,16 +145,19 @@
                         <div class="sub-menu-swiper swiper">
                             <div class="sub-menu-swiper-wrapper swiper-wrapper">
                                 <div class="swiper-slide active">
-                                    <a href="./appetizer&salad.html">에피타이저 & 샐러드</a>
+                                    <a href="./menu-appetizer&salad.html">에피타이저 & 샐러드</a>
                                 </div>
-                                <div class="swiper-slide"><a href="./pasta&rice.html">파스타 & 라이스</a></div>
-                                <div class="swiper-slide"><a href="#">피자</a></div>
-                                <div class="swiper-slide"><a href="#">스테이크</a></div>
-                                <div class="swiper-slide"><a href="#">시그니처 스테이크 세트</a></div>
-                                <div class="swiper-slide"><a href="./lunch.html">런치세트</a></div>
-                                <div class="swiper-slide"><a href="#">음료</a></div>
-                                <div class="swiper-slide"><a href="#">와인</a></div>
-                                <div class="swiper-slide"><a href="#">디저트</a></div>
+                                <div class="swiper-slide">
+                                    <a href="./menu-pasta&rice.html">파스타 & 라이스</a>
+                                </div>
+                                <div class="swiper-slide"><a href="./menu-pizza.html">피자</a></div>
+                                <div class="swiper-slide"><a href="./menu-steak.html">스테이크</a></div>
+                                <div class="swiper-slide">
+                                    <a href="./menu-signature.html">시그니처 스테이크 세트</a>
+                                </div>
+                                <div class="swiper-slide"><a href="./menu-lunch.html">런치세트</a></div>
+                                <div class="swiper-slide"><a href="./menu-beverage.html">음료&디저트</a></div>
+                                <div class="swiper-slide"><a href="./menu-wine.html">와인</a></div>
                             </div>
                         </div>
                     </div>
@@ -281,7 +374,5 @@
                 <p>COPYRIGHT ⓒ MFGKOREA ALL RIGHTS RESERVED.</p>
             </address>
         </footer>
-
-        <script src="./js/menu.js"></script>
     </body>
 </html>
